@@ -1,0 +1,10 @@
+Title: Fixed possible exception when a view is linking to a not permitted other view
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2p5
+Date: 1480943083
+
+
